--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uuid-tools",
   "displayName": "UUID Tools",
-  "description": "uuid generation/manipulation extension",
+  "description": "UUID generation/manipulation (v1, v2, v3, v4, v5, v6, v7)",
   "version": "2.0.0",
   "publisher": "diodeiot",
   "engines": {
