--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,5 @@
         "out": true // set this to false to include "out" folder in search results
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
-    "typescript.tsc.autoDetect": "off",
-    "code-runner.executorMap": {
-        "typescript": "npx ts-node-dev --respawn --clear --pretty --transpile-only",
-    },
-    "code-runner.runInTerminal": true,
-    "code-runner.ignoreSelection": true
+    "typescript.tsc.autoDetect": "off"
 }
